Fix apply buttons spacing in edit entry list view

--- a/frontend/src/views/EditEntry/List/styles.scss
+++ b/frontend/src/views/EditEntry/List/styles.scss
@@ -72,7 +72,8 @@ $height-header: 48px;
             }
 
             &:hover {
-                .action-buttons {
+                .action-buttons,
+                .apply-buttons {
                     opacity: 1;
                 }
             }
@@ -83,10 +84,29 @@ $height-header: 48px;
 
                     .header {
                         border: 0;
+
+                        .apply-buttons {
+                            display: flex;
+                            opacity: 0;
+
+                            button {
+                                margin: 0 $spacing-extra-small-alt;
+                                padding: 0;
+                            }
+                        }
+
                     }
 
                     .content {
                         border: 0;
+                    }
+
+                    &:hover {
+                        .header {
+                            .apply-buttons {
+                                opacity: 1;
+                            }
+                        } 
                     }
                 }
             }
